--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,63 @@
+body {
+	background-image: url(../images/outerspace_landscape.jpeg);
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-color: black;
+}
 
+nav {
+	position: fixed;
+	background-color: gray;
+	height: 7%;
+	width: 100%;
+	padding-left: 60px;
+	padding-right: 60px;
+	top: 0px;
+	left: 0px;
+	font-size: 2.5vh;
+}
+
+ul, li, .icon {
+	display: inline;
+
+}
+
+ul {
+	margin-bottom: 80px;
+}
+
+li::after {
+	content: " |";
+}
+
+.icon {
+	height: 100%;
+	border: 1px solid black;
+	border-radius: 50%;
+	vertical-align: middle;
+}
+
+.box {
+	margin-left:auto;
+    margin-right:auto;
+    margin-top: 200px;
+	border: 10px green dotted;
+	width: 600px;
+	height: 300px;
+}
+
+.cat, .dog{
+	position: relative;
+	width: 200px;
+	height: 200px;
+}
+
+.cat {
+	right: 100px;
+	bottom: 100px;
+}
+
+.dog {
+	left: 250px; 
+	top: 200px;
+}
