--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,16 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.left, .right {
+	margin: 10px;
+	width: 300px;
+}
+
+.left {
+	float: left;
+}
+
+.right {
+	float: right;
+}
